@@ -106,4 +106,9 @@ public class DevNullSearchProvider implements SearchProvider {
 		return null;
 	}
 
+	@Override
+	public Completable invokeReindex() {
+		return Completable.complete();
+	}
+
 }
