@@ -231,6 +231,7 @@ restore_failed=Restore fehlgeschlagen.
 
 search_index_batch_process_failed=Der Suchindex Batch konnte nicht erfolgreich abgearbeitet werden.
 search_admin_reindex_invoked=Die Reindizierung wurde gestartet.
+search_admin_reindex_already_in_progress=Rebuilding of the search index is currently running.
 search_admin_clear_invoked=Es wurden alle  Search Queue Batches entfernt.
 search_admin_createmappings_created=Die search queue mappings wurden neu erstellt.
 
