@@ -229,6 +229,7 @@ restore_failed=Restore failed.
 
 search_index_batch_process_failed=The search index batch failed to complete.
 search_admin_reindex_invoked=Rebuilding of the search index was started.
+search_admin_reindex_already_in_progress=Rebuilding of the search index is currently running.
 search_admin_clear_invoked=Clearing of search queue batches was completed.
 search_admin_createmappings_created=The search queue mappings were recreated.
 
