@@ -27,6 +27,12 @@ icon:plus[] Core: The core Vert.x library was updated to version 3.5.1
 
 icon:plus[] Config: It is now possible to configure the elasticsearch startup timeout via the `search.startupTimeout` field in the `mesh.yml` or via the `MESH_ELASTICSEARCH_STARTUP_TIMEOUT` environment variable.
 
+icon:plus[] Search: The reindex endpoint will now execute the reindex operation asynchronously.
+
+icon:plus[] Search: Two new reindex specific events have been added: `mesh.search.reindex.failed`, `mesh.search.reindex.completed`.
+
+icon:plus[] REST: The `GET /api/v1/search/status` endpoint response has been updated.
+
 icon:check[] Config: Fixed a bug which prevented optional boolean environment variables (e.g.: `MESH_HTTP_CORS_ENABLE_ENV`) from being handled correctly.
 
 icon:check[] Core: It is now possible to change the listType of a list field in a schema via the Rest-API.
@@ -35,7 +41,7 @@ icon:check[] Core: The server will now shutdown if an error has been detected du
 
 icon:check[] REST: Fixed an error which lead to inconsistent properties being shown in the job endpoint response.
 
-icon:check[] Search: When calling reindex via the `/api/v1/search/reindex` reindexing stopped after a certain amount of
+icon:check[] Search: When calling reindex via the `POST /api/v1/search/reindex` reindexing stopped after a certain amount of
   time because of a timeout in the database transaction. This has been fixed now.
 
 icon:check[] REST: In some cases parallel fileuploads of multiple images could cause the upload process to never finish. This has been fixed now. 
